# trt-asr-engine

./: .gitignore  AGENT_SETUP_GUIDE.md  CACHE_TIME_ROOT_CAUSE_ANALYSIS.md  CONTRIBUTING.md  MAGNOLIA_INTEGRATION_HANDOFF.md  ONNX_ORT_PARITY_README.md  ONNX_PARITY_RESULTS.md  README.md  TRT_INTEGRATION_CHECKLIST.md  TRT_INTEGRATION_CLEARANCE.md  audit_model_arch.json  cache_time_diagnostic.json  parity_50chunks_closedloop_cpu.json  parity_50chunks_closedloop_cuda.json  parity_50chunks_functional_cpu.json  parity_50chunks_functional_cuda.json
apps/trt_runtime_smoke/: CMakeLists.txt  README.md  main.cpp
artifacts/diagnostics/: streaming_cache_200.jsonl
artifacts/parity/: ort_predictor_joint_parity.json  ort_streaming_closedloop_4.json  ort_streaming_functional_4.json  ort_streaming_parity_cache3_50.json  parity_50chunks_closedloop_cpu.json  parity_50chunks_closedloop_cuda.json  parity_50chunks_functional_cpu.json  parity_50chunks_functional_cuda.json  trt_parity_300chunks_closedloop.json  trt_parity_300chunks_closedloop_fp16.json  trt_parity_50chunks_closedloop.json  trt_parity_50chunks_functional.json  trt_parity_50chunks_functional_fp16.json  trt_streaming_parity_cache3_fp32_50.json  trt_streaming_parity_cache3_fp32_t57_50.json  trt_streaming_parity_cache3_fp32_t57_noTF32_50.json
contracts/: encoder_streaming.contract.json  parakeet-tdt-0.6b-v3.contract.json
cpp/: CMakeLists.txt
cpp/include/: audio_tap.h  parakeet_trt.h  trt_asr.h
cpp/src/: decoder.cpp  decoder.h  engine_manager.cpp  engine_manager.h  greedy_decode_smoke.cpp  greedy_rnnt.h  mock_lib.cpp  parakeet_trt.cpp  tokenizer.cpp  tokenizer.h  trt_asr.cpp
docs/: ARCHITECTURE_RUNTIME.md  CONTRACT_SOURCES.md  DECISION_LOG.md  EXPORT_REPORT.md  REPO_ORGANIZATION_PROPOSAL.md  RESTART_PLAN.md  VALIDATION_REPORT_ORT.md  VALIDATION_REPORT_TRACE.md  VALIDATION_REPORT_TRT.md  VALIDATION_REPORT_WER.md  ci_runner.md  debugging.md  runtime_contract.md
docs/inventory/: INVENTORY.md  tree.txt
docs/txt/: 2304.06795v2.txt  2305.05084v6.txt  2312.17279v3.txt
eval/manifests/: librispeech_dev_gate.tsv
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/features/: Cargo.toml
rust/features/src/: lib.rs
rust/parakeet_trt/: Cargo.toml
rust/parakeet_trt/src/: lib.rs
rust/parakeet_trt_sys/: Cargo.toml  build.rs
tools/: README.md  analyze_tap.py  run_daemon.sh
tools/build_trt/: README.md  build.sh  build_engines.sh  build_trt.py  profiles.py  test_stage_external_data.py  utils.py
tools/build_trt/scripts/: build_all.sh  inspect_engine.py
tools/export_onnx/: README.md  export.py  export_nemo.py  requirements.txt
tools/inspect_onnx/: check_joint_output.py
tools/onnxruntime/: compare_encoder_step0.py  compare_joint_step0.py  diagnose_cache_time_mismatch.py  inspect_streaming_cache_graph.py  onnx_predictor_joint_parity.py  onnx_streaming_parity.py  ort_cache_sensitivity.py
tools/stt_suite/: AGENTS.md  __init__.py  make_gate_manifest.py  make_librispeech_manifest.py  make_manifest.py  run_librispeech_loopback_suite.sh  run_suite.py  score_wer.py
tools/tensorrt/: plot_stability.py  trt_streaming_parity.py
tools/verify_nemo/: README.md  audit_model_arch.py  compare_features.py  compare_tdt_trace.py  dump_preprocessor_cfg.py  requirements.txt  streaming_encoder_cache.py  streaming_encoder_reference.py  tdt_trace.py  verify.py
