[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
features = { path = "../features" }
parakeet_trt = { path = "../parakeet_trt" }
clap = { version = "4.4", features = ["derive"] }
hound = "3.5"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
